--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -1,4 +1,4 @@
-name: pull-request-check
+name: Test Pull Request
 
 on:
   pull_request:
@@ -6,11 +6,11 @@ on:
     - master
 
 jobs:
-  build-linux:
+  build-and-test-linux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: build
+    - uses: actions/checkout@v2
+    - name: Build
       run: make build/test
-    - name: test
+    - name: Test
       run: make check
