--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "test (MacOS)",
             "type": "lldb",
             "request": "launch",
-            "program": "a.out", // "${workspaceFolder}/build/test",
+            "program": "${workspaceFolder}/build/test",
             "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "make test"
